--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev" : "node --watch src/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "@Manoj Kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "http-status-codes": "^2.3.0"
+  }
 }
