--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "node --watch src/index.js ",
+    "dev": "node --watch src/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "@Manoj Kumar",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "winston": "^3.13.0"
   }
 }
